--- a/tests/pipl.yml
+++ b/tests/pipl.yml
@@ -4,6 +4,12 @@ workflow:
     - if: $CI_COMMIT_TAG
       variables:
         ENV: dev  # dev|test|prod
+        ACC_ID: null  # :str
+        MODE: bla #  required art|dep
+    - if: $CI_PIPELINE_SOURCE == 'push'
+      variables:
+        ENV: stage  # required dev|test|prod
+        ACC_ID: null  # required :str
 
 
 stages:
