--- a/setup.cfg
+++ b/setup.cfg
@@ -4,7 +4,7 @@ version = attr: glcidocs.__version__
 author = Martin Mudroch
 author_email = martin.mudroch@proton.me
 description = Simple generator of gitlab ci file documentation
-long_description = file: README.md CHANGELOG.md
+long_description = file: README.md
 long_description_content_type = text/markdown
 keywords = gitlab, pipeline, documentation, ci/cd, gitlab-ci
 license = MIT
@@ -20,6 +20,8 @@ zip_safe = False
 include_package_data = True
 packages = find:
 python_requires = >=3.8
+install_requires =
+    ruamel.yaml
 
 
 [options.packages.find]
