--- a/setup.cfg
+++ b/setup.cfg
@@ -1,12 +1,12 @@
 [metadata]
-name = glcidocs
-version = attr: glcidocs.__version__
+name = gitlabcidocs
+version = attr: gitlabcidocs.__version__
 author = Martin Mudroch
 author_email = martin.mudroch@proton.me
 description = Simple generator of gitlab ci file documentation
 long_description = file: README.md
 long_description_content_type = text/markdown
-keywords = gitlab, pipeline, documentation, ci/cd, gitlab-ci
+keywords = gitlab, pipeline, documentation, ci/cd, gitlab-ci, ci, workflow
 license = MIT
 url = https://github.com/martin356/gitlab-ci-docs
 classifiers =
