--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [metadata]
-name = gitlabcidocs
+name = gitlab-ci-docs
 version = attr: gitlabcidocs.__version__
 author = Martin Mudroch
 author_email = martin.mudroch@proton.me
