--- a/tests/pipl.yml
+++ b/tests/pipl.yml
@@ -13,6 +13,7 @@ workflow:
         PIPELINE_NAME: hmm
         ENV: stage  # required dev|test|prod
         ACC_ID: null  # required :str
+        CONST: const
 
     - if: $CI_COMMIT_BRANCH != 'main'
       when: never
